--- a/새로운 React 앱 만들기/my-app/package.json
+++ b/새로운 React 앱 만들기/my-app/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0-rc.0-next-9d4e8e84f-20220207",
+    "react-dom": "^18.0.0-rc.0-next-9d4e8e84f-20220207",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
